--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <!-- added classes and containes and id's -->
       <div class="row time-block" id="9">
         
         <div class="col-md-1 hour p-4">9am
         </div>
 
-        <textarea class="col-md-10 textarea">
+        <textarea class="col-md-10 textarea" id="text9">
 
         </textarea>
 
-        <button class="col-md-1 saveBtn "  >
-          <i class='fa fa-save'></i>
+        <button class="col-md-1 saveBtn"  id="btn9">
+          <i class='fa fa-save saveBtn i:hover'></i>
         </button>
 
       </div>
@@ -52,11 +53,11 @@
         <div class="col-md-1 hour p-4">10am
         </div>
 
-        <textarea class="col-md-10 textarea">
+        <textarea class="col-md-10 textarea" id="text10">
 
         </textarea>
 
-        <button class="col-md-1 saveBtn">
+        <button class="col-md-1 saveBtn" id="btn10">
           <i class='fa fa-save'></i>
         </button>
 
@@ -68,11 +69,11 @@
         <div class="col-md-1 hour p-4">11am
         </div>
 
-        <textarea class="col-md-10 textarea">
+        <textarea class="col-md-10 textarea" id="text11">
 
         </textarea>
 
-        <button class="col-md-1 saveBtn">
+        <button class="col-md-1 saveBtn" id="btn11">
           <i class='fa fa-save'></i>
         </button>
 
@@ -83,11 +84,11 @@
         <div class="col-md-1 hour p-4">12pm
         </div>
 
-        <textarea class="col-md-10 textarea">
+        <textarea class="col-md-10 textarea" id="text12">
 
         </textarea>
 
-        <button class="col-md-1 saveBtn">
+        <button class="col-md-1 saveBtn" id="btn12">
           <i class='fa fa-save'></i>
         </button>
 
@@ -98,11 +99,11 @@
         <div class="col-md-1 hour p-4">1pm
         </div>
 
-        <textarea class="col-md-10 textarea">
+        <textarea class="col-md-10 textarea" id="text13">
 
         </textarea>
 
-        <button class="col-md-1 saveBtn">
+        <button class="col-md-1 saveBtn" id="btn13">
           <i class='fa fa-save'></i>
         </button>
 
@@ -113,11 +114,11 @@
         <div class="col-md-1 hour p-4">2pm
         </div>
 
-        <textarea class="col-md-10 textarea">
+        <textarea class="col-md-10 textarea" id="text14">
 
         </textarea>
 
-        <button class="col-md-1 saveBtn">
+        <button class="col-md-1 saveBtn" id="btn14">
           <i class='fa fa-save'></i>
         </button>
 
@@ -128,11 +129,11 @@
         <div class="col-md-1 hour p-4">3pm
         </div>
 
-        <textarea class="col-md-10 textarea">
+        <textarea class="col-md-10 textarea" id="text15">
 
         </textarea>
 
-        <button class="col-md-1 saveBtn">
+        <button class="col-md-1 saveBtn" id="btn15">
           <i class='fa fa-save'></i>
         </button>
 
@@ -143,11 +144,11 @@
         <div class="col-md-1 hour p-4">4pm
         </div>
 
-        <textarea class="col-md-10 textarea">
+        <textarea class="col-md-10 textarea" id="text16">
 
         </textarea>
 
-        <button class="col-md-1 saveBtn">
+        <button class="col-md-1 saveBtn" id="btn16">
           <i class='fa fa-save'></i>
         </button>
 
@@ -158,11 +159,11 @@
         <div class="col-md-1 hour p-4">5pm
         </div>
 
-        <textarea class="col-md-10 textarea">
+        <textarea class="col-md-10 textarea" id="text17">
 
         </textarea>
 
-        <button class="col-md-1 saveBtn">
+        <button class="col-md-1 saveBtn" id="btn17">
           <i class='fa fa-save'></i>
         </button>
 
@@ -171,7 +172,6 @@
 
     </div>
   
-    <!-- <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
